# FastWord

./: .gitignore  LocalConfig.xcconfig.example  README.md  project.yml
FastWord/Resources/: AppIcon.icns  Python.entitlements
FastWord/Resources/en.lproj/: Localizable.strings
FastWord/Resources/ru.lproj/: Localizable.strings
FastWord/Resources/zh-Hans.lproj/: Localizable.strings
FastWord/Sources/: AppDelegate.swift  FastWordApp.swift  GigaAMInstaller.swift  HUDController.swift  HistoryStore.swift  HistoryView.swift  HotkeyMonitor.swift  MediaKey.swift  Migrations.swift  ModelCatalog.swift  ModelDownloader.swift  ModelManagementView.swift  Pasteboard.swift  Recorder.swift  Settings.swift  SettingsView.swift  SidecarClient.swift  SystemVolume.swift  TranscriptionPostProcessor.swift
scripts/: bootstrap.sh  build.sh  release.sh
sidecar/: requirements.txt  sidecar.py
sidecar-rust/: Cargo.toml
sidecar-rust/src/: gigaam.rs  main.rs
