[package]
name = "fastword-sidecar"
version = "0.2.0"
edition = "2021"
description = "Native whisper.cpp sidecar for FastWord"
license = "MIT"

[[bin]]
name = "fastword-sidecar"
path = "src/main.rs"

[dependencies]
whisper-rs = { version = "0.14", features = ["metal"] }
# Official sherpa-onnx Rust bindings — used for the GigaAM-v3 Russian engine.
# Statically linked by default; if the prebuilt lib download fails on the
# build machine the env var SHERPA_ONNX_LIB_DIR can override it.
sherpa-onnx = "1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
anyhow = "1.0"

[profile.release]
opt-level = "z"        # smaller binary; whisper.cpp itself does the heavy lifting
lto = true
codegen-units = 1
strip = true
panic = "abort"
